--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -5,7 +5,7 @@ on: [push]
 
 jobs:
   run-shell-command:
-    runs-on: ububtu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: echo a string
         run: echo "Hello World"
