--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,3 +9,10 @@ jobs:
     steps:
       - name: echo a string
         run: echo "Hello World"
+      - name: List files
+        run: |
+          pwd
+          ls -a
+          echo $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
+          echo $$GITHUB_WORKSPACE
