--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -19,3 +19,8 @@ jobs:
           echo $GITHUB_SHA
           echo $GITHUB_REPOSITORY
           echo $$GITHUB_WORKSPACE
+      - name: python command
+        run: |
+          import platform
+          print(platform.processor())
+        shell: python
