--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,14 +1,10 @@
-
 name: Shell Commands
-
-on:
-  push:
-  pull_request:
-    types: [closed, assigned, opened, reopened]
-
+on: [push]
 jobs:
   run-shell-command:
     runs-on: ubuntu-latest
+    env:
+      JOB_ENV: variable disponible para todos los pasos del job
     steps:
       - name: echo a string
         run: echo "Hello World"
@@ -24,3 +20,10 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
+      - name: Log ENV variables
+        env:
+          STEP_ENV: variable disponible para solo este paso
+        run: |
+          echo "WF_ENV: ${WF_ENV}"
+          echo "JOB_ENV: ${JOB_ENV}"
+          echo "STEP_ENV: ${STEP_ENV}" 
